--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
                     <a href="#" class="absolute inset-0"></a>
                 </div>
                 <div class="relative group overflow-hidden rounded-lg">
-                    <img src="https://images.unsplash.com/photo-1600185365483-26d7a4cc7519?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1025&q=80" alt="Infantil" class="w-full h-64 object-cover transition duration-500 group-hover:scale-105">
+                    <img src="conjunto.png" alt="Infantil" class="w-full h-64 object-cover transition duration-500 group-hover:scale-105">
                     <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
                         <h3 class="text-white text-2xl font-bold">Infantil</h3>
                     </div>
                     <a href="#" class="absolute inset-0"></a>
                 </div>
                 <div class="relative group overflow-hidden rounded-lg">
-                    <img src="https://images.unsplash.com/photo-1592155931584-901ac15763e3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Acessórios" class="w-full h-64 object-cover transition duration-500 group-hover:scale-105">
+                    <img src="bolsa.png">
                     <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
                         <h3 class="text-white text-2xl font-bold">Acessórios</h3>
                     </div>
