--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container mx-auto flex justify-between items-center">
             <div class="flex space-x-4">
                 <a href="#" class="hover:text-gray-200"><i class="fas fa-phone-alt mr-1"></i> (41) 99895-6228</a>
-                <a href="mailto:triix.nascimento@gmail.com" class="hover:text-gray-200"><i class="fas fa-envelope mr-1"></i> dafylin.nascimento@gmail.com</a>
+                <a href="mailto:triix.nascimento@gmail.com" class="hover:text-gray-200"><i class="fas fa-envelope mr-1"></i> triix.nascimento@gmail.com</a>
             </div>
             <div class="flex space-x-4">
                 <a href="#" class="hover:text-gray-200"><i class="fas fa-truck mr-1"></i> Frete Grátis acima de R$200</a>
@@ -440,7 +440,7 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8 mb-8">
                 <div>
-                    <h3 class="text-xl font-bold mb-4">DAFYLIN MODA</h3>
+                    <h3 class="text-xl font-bold mb-4">BEATRIZ MODA</h3>
                     <p class="text-gray-400 mb-4">Há 5 anos oferecendo as melhores roupas e acessórios com qualidade e estilo.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-facebook-f"></i></a>
